# QAdvisior

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_and_run.sh  input.qasm  main.cpp  p1.py
dependecy/: analysis.cpp  analysis.hpp  dependency.cpp  dependency.hpp  main.cpp  scheduler.cpp  scheduler.hpp
inputs/: 2cx.qasm  bellstate.qsm  goodrando.qsam  para.qasm
lexer/: ast.cpp  ast.hpp  lex.yy.c  lex.yy.cc  main.cpp  qasm.l  qasm.tab.cpp  qasm.tab.hpp  qasm.ypp  semantic.cpp  semantic.hpp
qir/: main.cpp  metadata_builder.cpp  metadata_builder.hpp  qir_generator.cpp  qir_generator.hpp  qubit_manager.cpp  qubit_manager.hpp  type_manager.cpp  type_manager.hpp
qir-executor/: Makefile  bell.ll  main.py  output.ll  pyproject.toml  qir_simulator_run_temp  results.json
qir-executor/qbraid/runtime/: native.py
test/: ghz.qasm  qir_runtime.cpp  teleport.qasm  test1.sh  test2.sh  test3.sh
